--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">MovieHunter</string>
     <string name="score">Score</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
+    <string name="genre">Genre</string>
+    <string name="my_collection">My Collection</string>
 </resources>
