--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -4,5 +4,6 @@
     <string name="action_settings">設定</string>
     <string name="action_about">關於</string>
     <string name="genre">類型</string>
+    <string name="now_playing">現正放映</string>
     <string name="my_collection">我的收藏</string>
 </resources>
