--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
     <string name="genre">Genre</string>
+    <string name="now_playing">Now Playing</string>
     <string name="my_collection">My Collection</string>
 </resources>
