Add watch list UI

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_about">關於</string>
     <string name="genre">類型</string>
     <string name="now_playing">現正放映</string>
-    <string name="my_collection">我的收藏</string>
+    <string name="watch_list">待看清單</string>
+    <string name="watch_history">觀看紀錄</string>
 </resources>
