--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_about">About</string>
     <string name="genre">Genre</string>
     <string name="now_playing">Now Playing</string>
-    <string name="my_collection">My Collection</string>
+    <string name="watch_list">Watch List</string>
+    <string name="watch_history">Watch History</string>
 </resources>
