--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,11 @@
     <string name="score">Score</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
+    <string name="action_search">Search</string>
     <string name="genre">Genre</string>
     <string name="now_playing">Now Playing</string>
     <string name="watch_list">Watch List</string>
     <string name="watch_history">Watch History</string>
+    <string name="search_movie">Search Movie</string>
+    <string name="back_again">Press back again to leave</string>
 </resources>
