--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -10,4 +10,8 @@
     <string name="watch_history">觀看紀錄</string>
     <string name="search_movie">搜尋電影</string>
     <string name="back_again">再按一次離開</string>
+    <string name="save_to_watched_movie">儲存至已觀看歷史</string>
+    <string name="rating">評分</string>
+    <string name="write_comment">撰寫電影心得</string>
+    <string name="save">儲存</string>
 </resources>
