--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -18,4 +18,5 @@
     <string name="delete">刪除</string>
     <string name="edit_watched_movie">編輯已觀看電影</string>
     <string name="comment">評論</string>
+    <string name="watch_date">觀看日期</string>
 </resources>
