--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="watch_date">Watch Date</string>
     <string name="login_account">Login Account</string>
     <string name="logout_account">Logout Account</string>
+    <string name="confirm_logout">Do you confirm to logout ?</string>
 </resources>
